--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
   justify-content: space-between;
 }
 
-#nodepartment {
+#Unassigned {
   flex: 1;
   background-color: rgb(209, 209, 226);
-  border-right: 4px solid black;
+  border-right: 1px solid black;
 }
 
 #Shoes {
